resolvendo active button mobile

--- a/src/Pages/Home/AboutMe.css
+++ b/src/Pages/Home/AboutMe.css
@@ -44,14 +44,14 @@
 
   @media only screen and (max-width: 700px) {
     .about--section {
-      padding: 120px 0px 0px 0px;
+      padding: 40px 0px 0px 0px;
       align-items: center;
       justify-content: center;
       gap: 20px;
       grid-template-columns: 1fr;
     }
     .about--section--img{
-      padding-bottom: 90px;
+      padding-bottom: 20px;
     }
     .about--section--heading {
       font-size: 40px;
