--- a/src/Pages/Home/MyPortfolio.css
+++ b/src/Pages/Home/MyPortfolio.css
@@ -139,7 +139,7 @@
   @media only screen and (max-width: 700px) {
     .portfolio--section {
       display: block;
-      padding: 130px 0px 100px 0px;
+      padding: 90px 0px 100px 0px;
     }
     .portfolio--section--heading{
       font-size: 2.5rem;
